Updated with version: 3.43.0 changes

--- a/_locales/en_GB/messages.json
+++ b/_locales/en_GB/messages.json
@@ -1963,7 +1963,7 @@
   },
   "error_msg_help_us":{
     "message":"Help us resolve this problem by sending us some debug data: Click ",
-    "description":"The text on the popup menu when an error has occurred"
+    "description":"DO NOT TRANSLATE"
   },
   "error_msg_thank_you":{
     "message":"Thank you",
@@ -1971,15 +1971,15 @@
   },
   "error_msg_reload":{
     "message":"Next, try reloading the extension: Click ",
-    "description":"The text on the popup menu when an error has occurred"
+    "description":"DO NOT TRANSLATE"
   },
   "error_msg_help":{
     "message":"If that doesn't work, check here for more help: Click ",
-    "description":"The text on the popup menu when an error has occurred"
+    "description":"DO NOT TRANSLATE"
   },
   "error_msg_here":{
     "message":"here",
-    "description":"The text on the popup menu when an error has occurred"
+    "description":"DO NOT TRANSLATE"
   },
   "generaloptions2":{
     "message":"General Options",
@@ -2068,5 +2068,49 @@
   "require_restart_browser":{
     "message":"requires restarting your browser",
     "description":"Text displayed within an option to notify users to restart the browser to fully enable the option"
+  },
+  "tabthemes":{
+    "message":"Themes",
+    "description":"A tab on the Options page"
+  },
+  "themes":{
+    "message":"Themes",
+    "description":"Title of the Themes tab of the Options page"
+  },
+  "popup_menu_theme":{
+    "message":"Pop-up Menu Theme",
+    "description":"Section title of the Themes tab of the Options page"
+  },
+  "options_page_theme":{
+    "message":"Options Page Theme",
+    "description":"Section title of the Themes tab of the Options page"
+  },
+  "more_themes_coming_soon":{
+    "message":"Check back soon, more themes are on the way!",
+    "description":"Text in theme box of the Themes tab of the Options page (no more than 60 characters)"
+  },
+  "stay_tuned":{
+    "message":"Stay tuned",
+    "description":"Text in theme box of the Themes tab of the Options page (no more than 30 characters)"
+  },
+  "header":{
+    "message":"Header",
+    "description":"Text in theme box of the Themes tab of the Options page (no more than 10 characters)"
+  },
+  "text_body":{
+    "message":"body text",
+    "description":"Text in theme box of the Themes tab of the Options page (no more than 22 characters)"
+  },
+  "default_theme":{
+    "message":"Default",
+    "description":"Name of a theme in the Themes tab of the Options page"
+  },
+  "dark_theme":{
+    "message":"Dark",
+    "description":"Name of a theme in the Themes tab of the Options page"
+  },
+  "apply_theme":{
+    "message":"Apply Theme",
+    "description":"Text of clickable element that applies the theme of a theme box in the Themes tab of the Options page"
   }
 }
