Updated with version: 3.44.0 changes

--- a/_locales/ca/messages.json
+++ b/_locales/ca/messages.json
@@ -7,6 +7,10 @@
     "message":"L'extensió més popular de Chrome, amb més de 60 milions d'usuaris! Bloqueja els anuncis de tota la xarxa.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
   },
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release \/ published builds.  Should not be translated",
+    "message":"L'AdBlock"
+  },
   "description_edge":{
     "message":"AdBlock. El millor bloquejador de publicitat amb més de 200 milions de baixades. Bloqueja tota la publicitat de la xarxa.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -1912,5 +1916,9 @@
   "changes_to_adblock":{
     "message":"Hem fet canvis a l'AdBlock!",
     "description":"Link to Options page with more information about the changes."
+  },
+  "myadblock_options_page_header":{
+    "message":"MyAdBlock",
+    "description":"The text of the header the MyAdBlock Options page"
   }
 }
