--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -1963,7 +1963,7 @@
   },
   "error_msg_help_us": {
     "message": "Helfen Sie uns, dieses Problem zu lösen, indem Sie uns Ihre Debug-Daten zukommen lassen: Klicken Sie auf ",
-    "description": "The text on the popup menu when an error has occurred"
+    "description": "DO NOT TRANSLATE"
   },
   "error_msg_thank_you": {
     "message": "Vielen Dank",
@@ -1971,15 +1971,15 @@
   },
   "error_msg_reload": {
     "message": "Versuchen Sie als Nächstes, die Erweiterung neu zu laden: Klicken Sie auf ",
-    "description": "The text on the popup menu when an error has occurred"
+    "description": "DO NOT TRANSLATE"
   },
   "error_msg_help": {
     "message": "Wenn das nicht funktionieren sollte, schauen Sie, ob Ihnen hier geholfen wird: Klicken Sie auf ",
-    "description": "The text on the popup menu when an error has occurred"
+    "description": "DO NOT TRANSLATE"
   },
   "error_msg_here": {
     "message": "hier",
-    "description": "The text on the popup menu when an error has occurred"
+    "description": "DO NOT TRANSLATE"
   },
   "generaloptions2": {
     "message": "Allgemeine Optionen",
@@ -2068,5 +2068,49 @@
   "require_restart_browser": {
     "message": "erfordert einen Neustart Ihres Browsers",
     "description": "Text displayed within an option to notify users to restart the browser to fully enable the option"
+  },
+  "tabthemes": {
+    "message": "Motive",
+    "description": "A tab on the Options page"
+  },
+  "themes": {
+    "message": "Motive",
+    "description": "Title of the Themes tab of the Options page"
+  },
+  "popup_menu_theme": {
+    "message": "Motiv: Pop-up-Menü",
+    "description": "Section title of the Themes tab of the Options page"
+  },
+  "options_page_theme": {
+    "message": "Motiv: Optionsseite",
+    "description": "Section title of the Themes tab of the Options page"
+  },
+  "more_themes_coming_soon": {
+    "message": "Schauen Sie mal wieder rein, wenn wir weitere Motive für Sie haben!",
+    "description": "Text in theme box of the Themes tab of the Options page (no more than 60 characters)"
+  },
+  "stay_tuned": {
+    "message": "Bleiben Sie uns treu",
+    "description": "Text in theme box of the Themes tab of the Options page (no more than 30 characters)"
+  },
+  "header": {
+    "message": "Header",
+    "description": "Text in theme box of the Themes tab of the Options page (no more than 10 characters)"
+  },
+  "text_body": {
+    "message": "Body-Text",
+    "description": "Text in theme box of the Themes tab of the Options page (no more than 22 characters)"
+  },
+  "default_theme": {
+    "message": "Standard",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
+  "dark_theme": {
+    "message": "Dunkel",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
+  "apply_theme": {
+    "message": "Motiv anwenden",
+    "description": "Text of clickable element that applies the theme of a theme box in the Themes tab of the Options page"
   }
 }
