--- a/_locales/gl/messages.json
+++ b/_locales/gl/messages.json
@@ -1,4 +1,8 @@
 {
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release \/ published builds.  Should not be translated",
+    "message":"AdBlock"
+  },
   "description_edge":{
     "message":"AdBlock. O bloqueador n. º 1 con máis de 200 millóns de descargas. Bloquea anuncios por toda a rede.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -190,10 +194,6 @@
   "reloadpageafterwhitelist":{
     "message":"Volver cargar a páxina.",
     "description":"Checkbox in the whitelist wizard"
-  },
-  "wizardcantrunonframesets":{
-    "message":"Esta funcionalidade de AdBlock non funciona neste sitio porque utiliza tecnoloxía obsoleta. Podes prohibir ou permitir recursos manualmente na pestana 'Personalizar' da páxina de opcións.",
-    "description":"Alert shown when the user tries to use a blacklist\/whitelist wizard on an old website"
   },
   "subscribeconfirm":{
     "message":"Tes a certeza de quererte subscribir á listaxe de filtros $title$?",
