--- a/_locales/id/messages.json
+++ b/_locales/id/messages.json
@@ -1,4 +1,8 @@
 {
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release \/ published builds.  Should not be translated",
+    "message":"AdBlock"
+  },
   "name_adblock_on_youtube":{
     "message":"AdBlock pada YouTube™",
     "description":"Name of version of the AdBlock extension that only blocks ads on YouTube. Other strings that refer to the 'AdBlock on YouTube' extension should use this name."
