--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -1963,7 +1963,7 @@
   },
   "error_msg_help_us": {
     "message": "この問題を解決するのに役立つデバッグデータを送信ください。Click",
-    "description": "The text on the popup menu when an error has occurred"
+    "description": "DO NOT TRANSLATE"
   },
   "error_msg_thank_you": {
     "message": "ありがとうございます",
@@ -1971,15 +1971,15 @@
   },
   "error_msg_reload": {
     "message": "次に、拡張機能をリロードしてください。Click",
-    "description": "The text on the popup menu when an error has occurred"
+    "description": "DO NOT TRANSLATE"
   },
   "error_msg_help": {
     "message": "それでもうまくいかない場合は、こちらをチェックしてください。Click",
-    "description": "The text on the popup menu when an error has occurred"
+    "description": "DO NOT TRANSLATE"
   },
   "error_msg_here": {
     "message": "こちら",
-    "description": "The text on the popup menu when an error has occurred"
+    "description": "DO NOT TRANSLATE"
   },
   "generaloptions2": {
     "message": "全般オプション",
@@ -2068,5 +2068,49 @@
   "require_restart_browser": {
     "message": "ブラウザを再起動する必要があります",
     "description": "Text displayed within an option to notify users to restart the browser to fully enable the option"
+  },
+  "tabthemes": {
+    "message": "テーマ",
+    "description": "A tab on the Options page"
+  },
+  "themes": {
+    "message": "テーマ",
+    "description": "Title of the Themes tab of the Options page"
+  },
+  "popup_menu_theme": {
+    "message": "ポップアップメニュー テーマ",
+    "description": "Section title of the Themes tab of the Options page"
+  },
+  "options_page_theme": {
+    "message": "オプションページ テーマ",
+    "description": "Section title of the Themes tab of the Options page"
+  },
+  "more_themes_coming_soon": {
+    "message": "新しいテーマが続々追加されていくので小まめにチェックしましょう！",
+    "description": "Text in theme box of the Themes tab of the Options page (no more than 60 characters)"
+  },
+  "stay_tuned": {
+    "message": "乞うご期待",
+    "description": "Text in theme box of the Themes tab of the Options page (no more than 30 characters)"
+  },
+  "header": {
+    "message": "ヘッダー",
+    "description": "Text in theme box of the Themes tab of the Options page (no more than 10 characters)"
+  },
+  "text_body": {
+    "message": "本文",
+    "description": "Text in theme box of the Themes tab of the Options page (no more than 22 characters)"
+  },
+  "default_theme": {
+    "message": "デフォルト",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
+  "dark_theme": {
+    "message": "ダーク",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
+  "apply_theme": {
+    "message": "テーマを適用",
+    "description": "Text of clickable element that applies the theme of a theme box in the Themes tab of the Options page"
   }
 }
