--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -7,6 +7,10 @@
     "message":"6천만 명 이상의 선택을 받은 가장 유명한 Chrome 확장 프로그램! 웹상의 광고를 차단할 수 있습니다.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
   },
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release \/ published builds.  Should not be translated",
+    "message":"AdBlock은"
+  },
   "description_edge":{
     "message":"AdBlock. 2억 회 이상 다운로드된 1위 광고 차단기. 인터넷의 모든 광고를 차단하세요.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -1912,5 +1916,9 @@
   "changes_to_adblock":{
     "message":"AdBlock에 변경점이 있습니다!",
     "description":"Link to Options page with more information about the changes."
+  },
+  "myadblock_options_page_header":{
+    "message":"MyAdBlock",
+    "description":"The text of the header the MyAdBlock Options page"
   }
 }
