--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -1963,7 +1963,7 @@
   },
   "error_msg_help_us": {
     "message": "Help ons dit probleem oplossen door debuggegevens te sturen: klik op ",
-    "description": "The text on the popup menu when an error has occurred"
+    "description": "DO NOT TRANSLATE"
   },
   "error_msg_thank_you": {
     "message": "Bedankt",
@@ -1971,15 +1971,15 @@
   },
   "error_msg_reload": {
     "message": "Probeer vervolgens de extensie opnieuw te laden: klik op ",
-    "description": "The text on the popup menu when an error has occurred"
+    "description": "DO NOT TRANSLATE"
   },
   "error_msg_help": {
     "message": "Kijk als dat niet werkt hier voor meer hulp: klik op ",
-    "description": "The text on the popup menu when an error has occurred"
+    "description": "DO NOT TRANSLATE"
   },
   "error_msg_here": {
     "message": "hier",
-    "description": "The text on the popup menu when an error has occurred"
+    "description": "DO NOT TRANSLATE"
   },
   "generaloptions2": {
     "message": "Algemene opties",
@@ -2068,5 +2068,49 @@
   "require_restart_browser": {
     "message": "hiervoor moet je je browser opnieuw opstarten",
     "description": "Text displayed within an option to notify users to restart the browser to fully enable the option"
+  },
+  "tabthemes": {
+    "message": "Thema's",
+    "description": "A tab on the Options page"
+  },
+  "themes": {
+    "message": "Thema's",
+    "description": "Title of the Themes tab of the Options page"
+  },
+  "popup_menu_theme": {
+    "message": "Pop-upmenu thema",
+    "description": "Section title of the Themes tab of the Options page"
+  },
+  "options_page_theme": {
+    "message": "Optiepagina thema",
+    "description": "Section title of the Themes tab of the Options page"
+  },
+  "more_themes_coming_soon": {
+    "message": "Kom binnenkort, er komen meer thema's aan!",
+    "description": "Text in theme box of the Themes tab of the Options page (no more than 60 characters)"
+  },
+  "stay_tuned": {
+    "message": "Blijf op de hoogte",
+    "description": "Text in theme box of the Themes tab of the Options page (no more than 30 characters)"
+  },
+  "header": {
+    "message": "Koptekst",
+    "description": "Text in theme box of the Themes tab of the Options page (no more than 10 characters)"
+  },
+  "text_body": {
+    "message": "bodytekst",
+    "description": "Text in theme box of the Themes tab of the Options page (no more than 22 characters)"
+  },
+  "default_theme": {
+    "message": "Standaard",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
+  "dark_theme": {
+    "message": "Donker",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
+  "apply_theme": {
+    "message": "Thema toepassen",
+    "description": "Text of clickable element that applies the theme of a theme box in the Themes tab of the Options page"
   }
 }
