--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -1,4 +1,8 @@
 {
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release \/ published builds.  Should not be translated",
+    "message":"AdBlock"
+  },
   "description_edge":{
     "message":"AdBlock. Numer 1 wśród programów do blokowania reklam z ponad 200 milionów pobrań. Blokuje reklamy w całym internecie.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -1856,5 +1860,9 @@
   "landscapechannelswitchlabel":{
     "message":"Krajobrazy",
     "description":"The label text for the Landscape switch on the MyAdBlock Options page"
+  },
+  "myadblock_options_page_header":{
+    "message":"MyAdBlock",
+    "description":"The text of the header the MyAdBlock Options page"
   }
 }
