--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -1963,7 +1963,7 @@
   },
   "error_msg_help_us": {
     "message": "Ajude-nos a resolver esse problema nos enviando dados para analisarmos: clique ",
-    "description": "The text on the popup menu when an error has occurred"
+    "description": "DO NOT TRANSLATE"
   },
   "error_msg_thank_you": {
     "message": "Obrigado",
@@ -1971,15 +1971,15 @@
   },
   "error_msg_reload": {
     "message": "Agora, tente recarregar a extensão: clique ",
-    "description": "The text on the popup menu when an error has occurred"
+    "description": "DO NOT TRANSLATE"
   },
   "error_msg_help": {
     "message": "Caso isso não funcione, obtenha mais ajuda: clique ",
-    "description": "The text on the popup menu when an error has occurred"
+    "description": "DO NOT TRANSLATE"
   },
   "error_msg_here": {
     "message": "aqui",
-    "description": "The text on the popup menu when an error has occurred"
+    "description": "DO NOT TRANSLATE"
   },
   "generaloptions2": {
     "message": "Opções gerais",
@@ -2068,5 +2068,49 @@
   "require_restart_browser": {
     "message": "necessita reiniciar o navegador",
     "description": "Text displayed within an option to notify users to restart the browser to fully enable the option"
+  },
+  "tabthemes": {
+    "message": "Temas",
+    "description": "A tab on the Options page"
+  },
+  "themes": {
+    "message": "Temas",
+    "description": "Title of the Themes tab of the Options page"
+  },
+  "popup_menu_theme": {
+    "message": "Tema de Menus Pop-up",
+    "description": "Section title of the Themes tab of the Options page"
+  },
+  "options_page_theme": {
+    "message": "Tema da Página de Opções",
+    "description": "Section title of the Themes tab of the Options page"
+  },
+  "more_themes_coming_soon": {
+    "message": "Volte em breve, temos mais temas a caminho!",
+    "description": "Text in theme box of the Themes tab of the Options page (no more than 60 characters)"
+  },
+  "stay_tuned": {
+    "message": "Fique ligado",
+    "description": "Text in theme box of the Themes tab of the Options page (no more than 30 characters)"
+  },
+  "header": {
+    "message": "Cabeçalho",
+    "description": "Text in theme box of the Themes tab of the Options page (no more than 10 characters)"
+  },
+  "text_body": {
+    "message": "texto",
+    "description": "Text in theme box of the Themes tab of the Options page (no more than 22 characters)"
+  },
+  "default_theme": {
+    "message": "Padrão",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
+  "dark_theme": {
+    "message": "Escuro",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
+  "apply_theme": {
+    "message": "Aplicar tema",
+    "description": "Text of clickable element that applies the theme of a theme box in the Themes tab of the Options page"
   }
 }
