--- a/_locales/sk/messages.json
+++ b/_locales/sk/messages.json
@@ -1,4 +1,8 @@
 {
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release \/ published builds.  Should not be translated",
+    "message":"AdBlock"
+  },
   "description_edge":{
     "message":"AdBlock. Číslo 1 v blokovaní reklám s viac ako 200 miliónmi stiahnutí. Blokuje reklamy na celom webe.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -178,10 +182,6 @@
   "reloadpageafterwhitelist":{
     "message":"Obnoviť stránku",
     "description":"Checkbox in the whitelist wizard"
-  },
-  "wizardcantrunonframesets":{
-    "message":"Táto funkcia AdBlocku nefunguje na tejto stránke, pretože využíva zastarané technológie. Avšak stále môžete zablokovať alebo odblokovať zdroje manuálne v tabe 'Prispôsobenie' na stránke s nastaveniami.",
-    "description":"Alert shown when the user tries to use a blacklist\/whitelist wizard on an old website"
   },
   "subscribeconfirm":{
     "message":"Chcete naozaj používať tento zoznam filtrov $title$?",
