--- a/_locales/tr/messages.json
+++ b/_locales/tr/messages.json
@@ -1,4 +1,8 @@
 {
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release \/ published builds.  Should not be translated",
+    "message":"AdBlock"
+  },
   "description_edge":{
     "message":"AdBlock. 200 milyonun üzerinde indirmeyle #1 numaralı reklam engelleyicisi. Tüm web sitelerindeki reklamları engeller.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
