--- a/_locales/zh_TW/messages.json
+++ b/_locales/zh_TW/messages.json
@@ -1963,7 +1963,7 @@
   },
   "error_msg_help_us": {
     "message": "傳送除錯資料給我們，幫助我們解決此問題：按一下 ",
-    "description": "The text on the popup menu when an error has occurred"
+    "description": "DO NOT TRANSLATE"
   },
   "error_msg_thank_you": {
     "message": "謝謝！",
@@ -1971,15 +1971,15 @@
   },
   "error_msg_reload": {
     "message": "接下來，嘗試重新載入擴充功能：按一下 ",
-    "description": "The text on the popup menu when an error has occurred"
+    "description": "DO NOT TRANSLATE"
   },
   "error_msg_help": {
     "message": "如果沒有用，請查看此處以取得更多説明：按一下 ",
-    "description": "The text on the popup menu when an error has occurred"
+    "description": "DO NOT TRANSLATE"
   },
   "error_msg_here": {
     "message": "這裡",
-    "description": "The text on the popup menu when an error has occurred"
+    "description": "DO NOT TRANSLATE"
   },
   "generaloptions2": {
     "message": "一般選項",
@@ -2068,5 +2068,49 @@
   "require_restart_browser": {
     "message": "需要重新啟動瀏覽器",
     "description": "Text displayed within an option to notify users to restart the browser to fully enable the option"
+  },
+  "tabthemes": {
+    "message": "佈景主題",
+    "description": "A tab on the Options page"
+  },
+  "themes": {
+    "message": "佈景主題",
+    "description": "Title of the Themes tab of the Options page"
+  },
+  "popup_menu_theme": {
+    "message": "彈出功能表佈景主題",
+    "description": "Section title of the Themes tab of the Options page"
+  },
+  "options_page_theme": {
+    "message": "選項頁面佈景主題",
+    "description": "Section title of the Themes tab of the Options page"
+  },
+  "more_themes_coming_soon": {
+    "message": "很快還會推出更多佈景主題，敬請期待！",
+    "description": "Text in theme box of the Themes tab of the Options page (no more than 60 characters)"
+  },
+  "stay_tuned": {
+    "message": "敬請期待",
+    "description": "Text in theme box of the Themes tab of the Options page (no more than 30 characters)"
+  },
+  "header": {
+    "message": "標題",
+    "description": "Text in theme box of the Themes tab of the Options page (no more than 10 characters)"
+  },
+  "text_body": {
+    "message": "內文",
+    "description": "Text in theme box of the Themes tab of the Options page (no more than 22 characters)"
+  },
+  "default_theme": {
+    "message": "預設",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
+  "dark_theme": {
+    "message": "暗色",
+    "description": "Name of a theme in the Themes tab of the Options page"
+  },
+  "apply_theme": {
+    "message": "套用主題",
+    "description": "Text of clickable element that applies the theme of a theme box in the Themes tab of the Options page"
   }
 }
