--- a/_locales/ar/messages.json
+++ b/_locales/ar/messages.json
@@ -7,6 +7,10 @@
     "message":"الإضافة الأكثر شعبية في كروم، أكثر من ٦٠ مليون مستخدم! تمنع الإعلانات على الإنترنت.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
   },
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release \/ published builds.  Should not be translated",
+    "message":"AdBlock"
+  },
   "description_edge":{
     "message":"AdBlock. مانع الإعلانات رقم واحد مع ما يزيد على ٢٠٠ مليون تحميل. يحجب الإعلانات في جميع أنحاء شبكة الإنترنت.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -198,10 +202,6 @@
   "reloadpageafterwhitelist":{
     "message":"إعادة تحميل الصفحة.",
     "description":"Checkbox in the whitelist wizard"
-  },
-  "wizardcantrunonframesets":{
-    "message":"ميزات AdBlock لا تعمل على هذا الموقع لأنه يستخدم تكنولوجيا قديمة. يمكنك اضافة موارد إلي لقائمة السوداء أو البيضاء  يدوياً في علامة التبويب 'تخصيص' من الصفحة خيارات.",
-    "description":"Alert shown when the user tries to use a blacklist\/whitelist wizard on an old website"
   },
   "subscribeconfirm":{
     "message":"هل أنت متأكد من أنك تريد الاشتراك في قائمة تصفية $title$؟",
@@ -1912,5 +1912,9 @@
   "changes_to_adblock":{
     "message":"أجرينا بعض التغييرات على AdBlock",
     "description":"Link to Options page with more information about the changes."
+  },
+  "myadblock_options_page_header":{
+    "message":"MyAdBlock",
+    "description":"The text of the header the MyAdBlock Options page"
   }
 }
