--- a/_locales/bg/messages.json
+++ b/_locales/bg/messages.json
@@ -7,6 +7,10 @@
     "message":"Най-популярното разширение за Chrome с над 60 милиона потребители! Блокира реклами в световната мрежа.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
   },
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release \/ published builds.  Should not be translated",
+    "message":"AdBlock"
+  },
   "description_edge":{
     "message":"AdBlock. Блокер на реклами №1 с над 200 милиона изтегляния! Блокира реклами в световната мрежа.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -1912,5 +1916,9 @@
   "changes_to_adblock":{
     "message":"Има промени в AdBlock!",
     "description":"Link to Options page with more information about the changes."
+  },
+  "myadblock_options_page_header":{
+    "message":"МоятАдблок",
+    "description":"The text of the header the MyAdBlock Options page"
   }
 }
