--- a/_locales/cs/messages.json
+++ b/_locales/cs/messages.json
@@ -7,6 +7,10 @@
     "message":"Nejpopulárnější rozšíření pro Chrome s více než 60 milióny uživatelů! Blokuje reklamy po celém webu.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
   },
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release \/ published builds.  Should not be translated",
+    "message":"AdBlock"
+  },
   "description_edge":{
     "message":"AdBlock. Jednička v blokování reklam s více než 200 milióny stažení. Blokuje reklamy po celém webu.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -182,6 +186,10 @@
   "whitelistertitle2":{
     "message":"Nespouštět AdBlock na...",
     "description":"The title of the whitelist wizard (Don't run on this page\/pages on this domain)"
+  },
+  "buttonexclude":{
+    "message":"Vyloučit",
+    "description":"Button for excluding a domain in the whitelist wizard"
   },
   "reloadpageafterwhitelist":{
     "message":"Znovu načíst stránku.",
@@ -1295,6 +1303,10 @@
     "message":"Smyslem této otázky je určit, kdo by měl dostat vaše hlášení. Pokud odpovíte na tuto otázku chybně, může být zpráva zaslána nesprávným lidem a pak může být ignorována.",
     "description":"Explanation of the 'Check in Firefox or Chrome' step on the ad report page"
   },
+  "mac_app_message_menu_part_one":{
+    "message":"Novinka!",
+    "description":"part one of the message to safari users on the popup menu"
+  },
   "blocked_ads":{
     "message":"Zablokovaných reklam:",
     "description":"Title for toolbar icon menu section showing number of ads blocked"
@@ -1462,7 +1474,7 @@
     "description":"Subtitle on the Support tab. Specific to the 'AdBlock on YouTube' extension."
   },
   "whatmakesadblocktick":{
-    "message":"Chcete vědět co stojí za AdBlock-em?",
+    "message":"Chcete vědět, co AdBlock tvoři?",
     "description":"Subtitle on the Support tab. This section contains links to the AdBlock source code and contributors. In this context, 'tick' can be replaced with the word 'work'."
   },
   "questionoridea":{
@@ -1728,5 +1740,9 @@
   "changes_to_adblock":{
     "message":"V AdBlocku jsme provedli změny!",
     "description":"Link to Options page with more information about the changes."
+  },
+  "myadblock_options_page_header":{
+    "message":"MyAdBlock",
+    "description":"The text of the header the MyAdBlock Options page"
   }
 }
