--- a/_locales/da/messages.json
+++ b/_locales/da/messages.json
@@ -1,4 +1,8 @@
 {
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release \/ published builds.  Should not be translated",
+    "message":"AdBlock"
+  },
   "description_edge":{
     "message":"AdBlock. Den førende reklameblokerer med over 200 millioner downloads. Blokerer reklamer over hele internettet.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -178,10 +182,6 @@
   "reloadpageafterwhitelist":{
     "message":"Genindlæs siden.",
     "description":"Checkbox in the whitelist wizard"
-  },
-  "wizardcantrunonframesets":{
-    "message":"Denne AdBlock-funktion virker ikke på denne hjemmeside, fordi den anvender forældet teknologi. Du kan blackliste eller whiteliste ressourcer manuelt under fanen 'Tilpas' i indstillingerne.",
-    "description":"Alert shown when the user tries to use a blacklist\/whitelist wizard on an old website"
   },
   "subscribingtitle":{
     "message":"Abonnér på filterliste...",
