--- a/_locales/en_US/messages.json
+++ b/_locales/en_US/messages.json
@@ -7,13 +7,13 @@
     "message":"The most popular Chrome extension, with over 60 million users! Blocks ads all over the web.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
   },
-  "name_devbuild": {
-    "description": "Extension name to be shown for development builds. Note: this cannot be longer than 45 characters. Should not be translated",
-    "message": "AdBlock development build"
+  "name_devbuild":{
+    "description":"Extension name to be shown for development builds. Note: this cannot be longer than 45 characters. Should not be translated",
+    "message":"AdBlock development build"
   },
-  "name_releasebuild": {
-    "description": "Extension name to be shown for release / published builds.  Should not be translated",
-    "message": "AdBlock"
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release \/ published builds.  Should not be translated",
+    "message":"AdBlock"
   },
   "description_edge":{
     "message":"AdBlock. The #1 ad blocker with over 200 million downloads. Blocks ads all over the web.",
@@ -2019,7 +2019,7 @@
   },
   "filter_warning_removal_explained":{
     "message":"removes warnings about using ad blockers",
-    "description": "A filter list explaination"
+    "description":"A filter list explaination"
   },
   "filterlistsrock2":{
     "message":"The filter lists block most ads on the web. You can also...",
