--- a/_locales/he/messages.json
+++ b/_locales/he/messages.json
@@ -7,6 +7,14 @@
     "message":"הרחבת Chrome הפופולרית ביותר, עם יותר מ־60 מיליון משתמשים! חוסמת פרסומות בכל רחבי הרשת.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
   },
+  "name_devbuild":{
+    "description":"Extension name to be shown for development builds. Note: this cannot be longer than 45 characters. Should not be translated",
+    "message":"בניית פיתוח של AdBlock"
+  },
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release \/ published builds.  Should not be translated",
+    "message":"AdBlock"
+  },
   "description_edge":{
     "message":"AdBlock. חוסם הפרסומות #1 עם למעלה מ־200 מיליון הורדות. חוסם פרסומות מכל רחבי הרשת.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -1865,6 +1873,14 @@
     "message":"אפשר את MyAdBlock",
     "description":"The text of the menu item in the popup menu that takes you to the MyAdBlock Enrollment page"
   },
+  "adblockprotectenrollmentbutton":{
+    "message":"נסה עכשיו — זה חינמי",
+    "description":"The text of the button in the menu item in the popup menu for AdBlock Protect extension.  Will automatically be converted to all uppercase"
+  },
+  "adblockprotectenrollmenttext":{
+    "message":"שמור על המידע האישי שלך בטוח עם AdBlock Protect",
+    "description":"The text of the menu item in the popup menu that takes users for the AdBlock Protect extension"
+  },
   "myadblockoptionspageheader":{
     "message":"אפשרויות MyAdBlock",
     "description":"The text of the header the MyAdBlock Options page"
@@ -1912,5 +1928,157 @@
   "changes_to_adblock":{
     "message":"עשינו שינויים אל AdBlock!",
     "description":"Link to Options page with more information about the changes."
+  },
+  "new_myadblock_feature_available":{
+    "message":"לחץ כאן כדי לשחרר מאפייינים חדשים!",
+    "description":"The text in the popup menu item saying there is a new MyAdBlock feature and takes you to the MyAdBlock tab in the option page."
+  },
+  "images_coming_soon":{
+    "message":"עוד תצלומים בקרוב!",
+    "description":"The text telling MyAdBlock active users that there will be more photos for MyAdBlock."
+  },
+  "myadblock_pic_replacemenet_description":{
+    "message":"החלף פרסומות בתמונות שאתה אוהב",
+    "description":"The text briefly describing what the feature does in the MyAdBlock tab in the option page."
+  },
+  "myadblock_payment_not_available_title":{
+    "message":"הו לא! לא יכולנו להתחבר לשרתים שלנו",
+    "description":"The title of an error message box in the MyAdBlock tab in option page when we cannot load iframe."
+  },
+  "myadblock_payment_not_available_text":{
+    "message":"אנחנו כל כך שמחים שאתה מעוניין ב־MyAdBlock! למרבה הצער, איננו יכולים לעבד תשלומים כרגע. אנא נסה שוב יותר מאוחר.",
+    "description":"The text of an error message box in the MyAdBlock tab in option page when we cannot load iframe."
+  },
+  "myadblock_options_page_header":{
+    "message":"MyAdBlock",
+    "description":"The text of the header the MyAdBlock Options page"
+  },
+  "myadblock_picreplacement_exlained":{
+    "message":"בחר מהקטגוריות למטה ו־AdBlock יחליף לעיתים פרסומות בתמונות באיכות גבוהה כדי להבהיר את היום שלך.",
+    "description":"The label text for the switch on the MyAdBlock Options page"
+  },
+  "error_msg_header":{
+    "message":"אופס! אנחנו מצטערים, לתפריט AdBlock הייתה בעיה בטעינה.",
+    "description":"The text on the popup menu when an error has occurred"
+  },
+  "error_msg_thank_you":{
+    "message":"תודה",
+    "description":"The text on the popup menu when an error has occurred"
+  },
+  "error_msg_here":{
+    "message":"כאן",
+    "description":"DO NOT TRANSLATE"
+  },
+  "generaloptions2":{
+    "message":"אפשרויות כלליות",
+    "description":"Title of one of the Options page tabs"
+  },
+  "debuginlogoption2":{
+    "message":"הראה הצהרות ניפוי ביומן מסוף",
+    "description":"Checkbox on the 'General' tab of the Options page"
+  },
+  "enter_url":{
+    "message":"הכנס כתובת",
+    "description":"Placeholder text in the Custom Filter list URL bar"
+  },
+  "filterantisocial2":{
+    "message":"רשימת מסננים נגד־חברתיים",
+    "description":"A filter list"
+  },
+  "filter_antisocial_explained":{
+    "message":"מסיר כפתורי מדיה חברתית",
+    "description":"A filter list explaination"
+  },
+  "filterannoyances2":{
+    "message":"Fanboy's Annoyances",
+    "description":"A filter list"
+  },
+  "filter_annoyances_explained":{
+    "message":"חוסם חלונות קופצים בתוך עמוד, מדיה חברתית ויישומונים קשורים, ומטרדים אחרים",
+    "description":"A filter list explaination"
+  },
+  "filter_warning_removal_explained":{
+    "message":"מסיר אזהרות לגבי שימוש בחוסמי פרסומות",
+    "description":"A filter list explaination"
+  },
+  "filterlistsrock2":{
+    "message":"רשימות המסננים חוסמות את רוב הפרסומות ברשת. אתה גם יכול...",
+    "description":"Header text on the Customize tab"
+  },
+  "blockmoreads2":{
+    "message":"חסום עוד פרסומות",
+    "description":"Subtitle on the 'Customize' tab"
+  },
+  "stop_blocking_ads2":{
+    "message":"הפסק לחסום פרסומות",
+    "description":"Subtitle on the 'Customize' tab"
+  },
+  "manualfilteredit2":{
+    "message":"ערוך באופן ידני את מסנניך",
+    "description":"Subtitle on the 'Customize' tab"
+  },
+  "manualexcludefilteredit2":{
+    "message":"ערוך מסננים מושבתים",
+    "description":"Subtitle on the 'Customize' tab"
+  },
+  "filtersavewarning_part1":{
+    "message":"היזהר: אם תעשה כאן טעות מסננים רבים אחרים, כולל המסננים הרשמיים, יכולים להישבר!",
+    "description":"Warning when manually editing filters -- first part not clickable."
+  },
+  "filtersavewarning_part2":{
+    "message":"קרא את [[filter syntax tutorial]] כדי ללמוד איך להוסיף מסננים מתקדמים של רשימה שחורה ורשימה לבנה.",
+    "description":"Warning when manually editing filters -- second part clickable."
+  },
+  "pwyw2":{
+    "message":"שלם כפי יכולתך!",
+    "description":"Text of a payment request link"
+  },
+  "translator_credit2":{
+    "message":"קרדיט לתרגום הולך אל...",
+    "description":"This message will be followed by a list of names of the translators who contributed to the language AdBlock is currently displayed in. Do not add any names to this string."
+  },
+  "selectlanguage2":{
+    "message":"בחר שפה",
+    "description":"First option in the language dropdown menu on the Filter lists tab."
+  },
+  "allow_whitelisting_youtube_channels2":{
+    "message":"התר רשימה לבנה של ערוצי YouTube™ מסוימים",
+    "description":"Checkbox on the 'General' tab of the Options page"
+  },
+  "require_restart_browser":{
+    "message":"דורש הפעלה מחדש של הדפדפן שלך",
+    "description":"Text displayed within an option to notify users to restart the browser to fully enable the option"
+  },
+  "tabthemes":{
+    "message":"ערכות נושא",
+    "description":"A tab on the Options page"
+  },
+  "themes":{
+    "message":"ערכות נושא",
+    "description":"Title of the Themes tab of the Options page"
+  },
+  "more_themes_coming_soon":{
+    "message":"בדוק שוב בקרוב, ערכות נושא נוספות בדרך!",
+    "description":"Text in theme box of the Themes tab of the Options page (no more than 60 characters)"
+  },
+  "header":{
+    "message":"כותרת",
+    "description":"Text in theme box of the Themes tab of the Options page (no more than 10 characters)"
+  },
+  "text_body":{
+    "message":"טקסט גוף",
+    "description":"Text in theme box of the Themes tab of the Options page (no more than 22 characters)"
+  },
+  "default_theme":{
+    "message":"ברירת מחדל",
+    "description":"Name of a theme in the Themes tab of the Options page"
+  },
+  "dark_theme":{
+    "message":"כהה",
+    "description":"Name of a theme in the Themes tab of the Options page"
+  },
+  "apply_theme":{
+    "message":"החל ערכת נושא",
+    "description":"Text of clickable element that applies the theme of a theme box in the Themes tab of the Options page"
   }
 }
