--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -7,6 +7,10 @@
     "message":"A legnépszerűbb Chrome kiegészítő, több mint 60 millió felhasználóval! Reklámokat blokkol szerte a weben.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
   },
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release \/ published builds.  Should not be translated",
+    "message":"Az AdBlock"
+  },
   "description_edge":{
     "message":"AdBlock. Az elsőszámú hirdetés blokkoló, több mint 200 millió letöltéssel. Blokkolja a hirdetéseket szerte a hálón.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -1912,5 +1916,9 @@
   "changes_to_adblock":{
     "message":"Módosítottunk az AdBlock-on!",
     "description":"Link to Options page with more information about the changes."
+  },
+  "myadblock_options_page_header":{
+    "message":"MyAdBlock",
+    "description":"The text of the header the MyAdBlock Options page"
   }
 }
