--- a/_locales/lv/messages.json
+++ b/_locales/lv/messages.json
@@ -1,4 +1,8 @@
 {
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release \/ published builds.  Should not be translated",
+    "message":"AdBlock"
+  },
   "description_edge":{
     "message":"AdBlock. #1 reklāmu bloķētājs ar vairāk nekā 200 miljoniem lejuplāžu. Bloķē reklāmas jebkurā mājas lapā.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -148,10 +152,6 @@
   "reloadpageafterwhitelist":{
     "message":"Pārlādēt lapu.",
     "description":"Checkbox in the whitelist wizard"
-  },
-  "wizardcantrunonframesets":{
-    "message":"Šī AdBlock iespēja nestrādā šajā saitē, jo tā izmanto novecojusi tehnoloģiju tu vari papildināt melno sarakstu \"Pielāgot\" opciju lapā.",
-    "description":"Alert shown when the user tries to use a blacklist\/whitelist wizard on an old website"
   },
   "subscribeconfirm":{
     "message":"Vai tu esi pārliecināts, ka vēlies abonēt $title$ filtru sarakstu?",
