--- a/_locales/ms/messages.json
+++ b/_locales/ms/messages.json
@@ -7,6 +7,14 @@
     "message":"Sambungan Chrome yang paling popular, dengan hampir 60 juta pengguna! Sekat iklan di seluruh web.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
   },
+  "name_devbuild":{
+    "description":"Extension name to be shown for development builds. Note: this cannot be longer than 45 characters. Should not be translated",
+    "message":"Pembangunan membina AdBlock"
+  },
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release \/ published builds.  Should not be translated",
+    "message":"AdBlock"
+  },
   "description_edge":{
     "message":"AdBlock. Penyekat iklan No. 1 dengan lebih 200 juta muat turun. Sekat iklan di seluruh web.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -1865,6 +1873,14 @@
     "message":"Dayakan MyAdBlock",
     "description":"The text of the menu item in the popup menu that takes you to the MyAdBlock Enrollment page"
   },
+  "adblockprotectenrollmentbutton":{
+    "message":"Cuba Sekarang -- Ianya Percuma",
+    "description":"The text of the button in the menu item in the popup menu for AdBlock Protect extension.  Will automatically be converted to all uppercase"
+  },
+  "adblockprotectenrollmenttext":{
+    "message":"Simpan maklumat peribadi anda dengan selamat dengan AdBlock Protect",
+    "description":"The text of the menu item in the popup menu that takes users for the AdBlock Protect extension"
+  },
   "myadblockoptionspageheader":{
     "message":"Tetapan MyAdBlock",
     "description":"The text of the header the MyAdBlock Options page"
@@ -1912,5 +1928,189 @@
   "changes_to_adblock":{
     "message":"Kami telah membuat perubahan kepada AdBlock!",
     "description":"Link to Options page with more information about the changes."
+  },
+  "new_myadblock_feature_available":{
+    "message":"Klik sini untuk melihat ciri baharu!",
+    "description":"The text in the popup menu item saying there is a new MyAdBlock feature and takes you to the MyAdBlock tab in the option page."
+  },
+  "images_coming_soon":{
+    "message":"Lebih banyak gambar akan datang!",
+    "description":"The text telling MyAdBlock active users that there will be more photos for MyAdBlock."
+  },
+  "myadblock_pic_replacemenet_description":{
+    "message":"Ganti iklan dengan gambar yang anda suka",
+    "description":"The text briefly describing what the feature does in the MyAdBlock tab in the option page."
+  },
+  "myadblock_payment_not_available_title":{
+    "message":"OH TIDAK! Kami tidak dapat menyambung ke pelayan kami",
+    "description":"The title of an error message box in the MyAdBlock tab in option page when we cannot load iframe."
+  },
+  "myadblock_payment_not_available_text":{
+    "message":"Kami gembira anda berminat dengan MyAdBlock! Malangnya, kami tidak dapat memproses pembayaran sekarang. Sila cuba sebentar lagi.",
+    "description":"The text of an error message box in the MyAdBlock tab in option page when we cannot load iframe."
+  },
+  "myadblock_options_page_header":{
+    "message":"MyAdBlock",
+    "description":"The text of the header the MyAdBlock Options page"
+  },
+  "myadblock_picreplacement_exlained":{
+    "message":"Pilih daripada kategori di bawah dan AdBlock akan sesekali menggantikan iklan dengan gambar berkualiti tinggi.",
+    "description":"The label text for the switch on the MyAdBlock Options page"
+  },
+  "error_msg_header":{
+    "message":"Oops! Kami minta maaf, menu AdBlock tidak dapat dimuat.",
+    "description":"The text on the popup menu when an error has occurred"
+  },
+  "error_msg_help_us":{
+    "message":"Bantu kami menyelesaikan masalah ini dengan menghantar data nyahpijat: Klik ",
+    "description":"DO NOT TRANSLATE"
+  },
+  "error_msg_thank_you":{
+    "message":"Terima kasih",
+    "description":"The text on the popup menu when an error has occurred"
+  },
+  "error_msg_reload":{
+    "message":"Seterusnya, cuba muat semula sambungan: Klik ",
+    "description":"DO NOT TRANSLATE"
+  },
+  "error_msg_help":{
+    "message":"Jika ia tidak berkesan, semak di sini untuk bantuan lanjut: Klik ",
+    "description":"DO NOT TRANSLATE"
+  },
+  "error_msg_here":{
+    "message":"di sini",
+    "description":"DO NOT TRANSLATE"
+  },
+  "generaloptions2":{
+    "message":"Tetapan Umum",
+    "description":"Title of one of the Options page tabs"
+  },
+  "debuginlogoption2":{
+    "message":"Tunjuk kenyataan nyahpijat di Log Konsol",
+    "description":"Checkbox on the 'General' tab of the Options page"
+  },
+  "slows_down_extension":{
+    "message":"melambatkan sambungan itu",
+    "description":"Text of an option telling users that the option slows down the extension"
+  },
+  "enter_url":{
+    "message":"masukkan URL",
+    "description":"Placeholder text in the Custom Filter list URL bar"
+  },
+  "filterantisocial2":{
+    "message":"Senarai penapis Antisocial",
+    "description":"A filter list"
+  },
+  "filter_antisocial_explained":{
+    "message":"membuang butang media sosial",
+    "description":"A filter list explaination"
+  },
+  "filterannoyances2":{
+    "message":"Fanboy's Annoyances",
+    "description":"A filter list"
+  },
+  "filter_annoyances_explained":{
+    "message":"menyekat pop timbul dalam-halaman, media sosial, widget berkaitan dan gangguan lain",
+    "description":"A filter list explaination"
+  },
+  "filterwarning_removal2":{
+    "message":"Senarai Penyingkiran Amaran Adblock",
+    "description":"A filter list. \"Adblock\" is written with a lowercase B in this string as it refers to ad blocking extensions in general, not just AdBlock specifically."
+  },
+  "filter_warning_removal_explained":{
+    "message":"membuang amaran tentang penggunaan penyekat iklan",
+    "description":"A filter list explaination"
+  },
+  "filterlistsrock2":{
+    "message":"Senarai ini menyekat kebanyakan iklan di web. Anda juga boleh...",
+    "description":"Header text on the Customize tab"
+  },
+  "blockmoreads2":{
+    "message":"Menyekat lebih banyak iklan",
+    "description":"Subtitle on the 'Customize' tab"
+  },
+  "stop_blocking_ads2":{
+    "message":"Berhenti menyekat iklan",
+    "description":"Subtitle on the 'Customize' tab"
+  },
+  "manualfilteredit2":{
+    "message":"Sunting penapis anda secara manual",
+    "description":"Subtitle on the 'Customize' tab"
+  },
+  "manualexcludefilteredit2":{
+    "message":"Sunting penapis dinyahdaya",
+    "description":"Subtitle on the 'Customize' tab"
+  },
+  "filtersavewarning_part1":{
+    "message":"Hati-hati: jika anda membuat kesilapan di sini, penapis lain termasuk penapis rasmi boleh menajdi tidak berfungsi!",
+    "description":"Warning when manually editing filters -- first part not clickable."
+  },
+  "filtersavewarning_part2":{
+    "message":"Baca [[tutorial sintaks penapis]] untuk belajar cara untuk menambah senarai hitam dan putih yang lebih maju.",
+    "description":"Warning when manually editing filters -- second part clickable."
+  },
+  "pwyw2":{
+    "message":"Bayar Apa yang Anda Mahu!",
+    "description":"Text of a payment request link"
+  },
+  "translator_credit2":{
+    "message":"Penghargaan terjemahan diberi kepada...",
+    "description":"This message will be followed by a list of names of the translators who contributed to the language AdBlock is currently displayed in. Do not add any names to this string."
+  },
+  "selectlanguage2":{
+    "message":"pilih bahasa",
+    "description":"First option in the language dropdown menu on the Filter lists tab."
+  },
+  "allow_whitelisting_youtube_channels2":{
+    "message":"Benarkan senarai putih saluran Youtube™ tertentu",
+    "description":"Checkbox on the 'General' tab of the Options page"
+  },
+  "require_restart_browser":{
+    "message":"memerlukan mula semula pelayar anda",
+    "description":"Text displayed within an option to notify users to restart the browser to fully enable the option"
+  },
+  "tabthemes":{
+    "message":"Tema",
+    "description":"A tab on the Options page"
+  },
+  "themes":{
+    "message":"Tema",
+    "description":"Title of the Themes tab of the Options page"
+  },
+  "popup_menu_theme":{
+    "message":"Tema Menu Pop timbul",
+    "description":"Section title of the Themes tab of the Options page"
+  },
+  "options_page_theme":{
+    "message":"Tema Halaman Tetapan",
+    "description":"Section title of the Themes tab of the Options page"
+  },
+  "more_themes_coming_soon":{
+    "message":"Periksa semula nanti, lebih banyak tema akan datang!",
+    "description":"Text in theme box of the Themes tab of the Options page (no more than 60 characters)"
+  },
+  "stay_tuned":{
+    "message":"Terus bersama kami",
+    "description":"Text in theme box of the Themes tab of the Options page (no more than 30 characters)"
+  },
+  "header":{
+    "message":"Pengepala",
+    "description":"Text in theme box of the Themes tab of the Options page (no more than 10 characters)"
+  },
+  "text_body":{
+    "message":"teks badan",
+    "description":"Text in theme box of the Themes tab of the Options page (no more than 22 characters)"
+  },
+  "default_theme":{
+    "message":"Lalai",
+    "description":"Name of a theme in the Themes tab of the Options page"
+  },
+  "dark_theme":{
+    "message":"Gelap",
+    "description":"Name of a theme in the Themes tab of the Options page"
+  },
+  "apply_theme":{
+    "message":"Guna Tema",
+    "description":"Text of clickable element that applies the theme of a theme box in the Themes tab of the Options page"
   }
 }
