--- a/_locales/nb/messages.json
+++ b/_locales/nb/messages.json
@@ -7,6 +7,10 @@
     "message":"Den mest populære Chrome-utvidelsen med over 40 millioner brukere! Blokkerer annonser over hele internettet.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
   },
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release \/ published builds.  Should not be translated",
+    "message":"AdBlock"
+  },
   "description_edge":{
     "message":"AdBlock. Reklameblokkerer #1 med over 200 millioner nedlastninger. Blokkerer reklamer over hele internettet.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -1868,5 +1872,9 @@
   "landscapechannelswitchlabel":{
     "message":"Landskap",
     "description":"The label text for the Landscape switch on the MyAdBlock Options page"
+  },
+  "myadblock_options_page_header":{
+    "message":"MyAdBlock",
+    "description":"The text of the header the MyAdBlock Options page"
   }
 }
