--- a/_locales/pt_PT/messages.json
+++ b/_locales/pt_PT/messages.json
@@ -1,4 +1,8 @@
 {
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release \/ published builds.  Should not be translated",
+    "message":"AdBlock"
+  },
   "description_edge":{
     "message":"AdBlock. O bloqueador de anúncios n°1 com mais 200 milhões de transferências. Bloqueia anúncios em toda a web.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -186,10 +190,6 @@
   "reloadpageafterwhitelist":{
     "message":"Recarregar a página.",
     "description":"Checkbox in the whitelist wizard"
-  },
-  "wizardcantrunonframesets":{
-    "message":"Esta funcionalidade do AdBlock não funciona neste site porque apresenta tecnologia desactualizada. Pode colocar na lista negra ou nos recursos da whitelist manualmente no separador 'Personalizar' da página de opções.",
-    "description":"Alert shown when the user tries to use a blacklist\/whitelist wizard on an old website"
   },
   "subscribeconfirm":{
     "message":"Tem a certeza que quer subscrever à lista de filtros de $title$?",
