--- a/_locales/ro/messages.json
+++ b/_locales/ro/messages.json
@@ -7,6 +7,10 @@
     "message":"Cea mai populară extensie pentru Chrome, cu peste 60 de milioane de utilizatori! Blochează orice reclamă de pe web.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
   },
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release \/ published builds.  Should not be translated",
+    "message":"AdBlock"
+  },
   "description_edge":{
     "message":"AdBlock. Nr.1 în blocarea reclamelor cu peste 200 de milioane de descărcări. Blochează toate reclamele în tot internetul.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -198,10 +202,6 @@
   "reloadpageafterwhitelist":{
     "message":"Reîncărcaţi pagina.",
     "description":"Checkbox in the whitelist wizard"
-  },
-  "wizardcantrunonframesets":{
-    "message":"Această caracteristică AdBlock nu funcţionează pe acest site deoarece nu foloseşte tehnologie de actualitate. Puteţi pune manual resurse pe lista neagră sau albă în tab-ul 'Personalizare' din pagina de opţiuni.",
-    "description":"Alert shown when the user tries to use a blacklist\/whitelist wizard on an old website"
   },
   "subscribeconfirm":{
     "message":"Sunteţi sigur că doriţi să vă abonaţi la lista de filtrare $title$?",
