--- a/_locales/sl/messages.json
+++ b/_locales/sl/messages.json
@@ -1,4 +1,8 @@
 {
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release \/ published builds.  Should not be translated",
+    "message":"AdBlock"
+  },
   "description_edge":{
     "message":"AdBlock. Najbolj popularna razširitev za blokiranje oglasov z več kot 200 milijonov prenosov. Blokira oglase po vsem spletu.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -182,10 +186,6 @@
   "reloadpageafterwhitelist":{
     "message":"Ponovno naložite stran.",
     "description":"Checkbox in the whitelist wizard"
-  },
-  "wizardcantrunonframesets":{
-    "message":"Ta funkcija AdBlocka tukaj ne deluje, ker stran uporablja zastarelo tehnologijo. Vire lahko ročno blokirate ali dovolite v zavihku Prilagodi na strani z nastavitvami.",
-    "description":"Alert shown when the user tries to use a blacklist\/whitelist wizard on an old website"
   },
   "subscribeconfirm":{
     "message":"Ali ste prepričani, da se želite naročiti na filter $title$?",
