--- a/_locales/uk/messages.json
+++ b/_locales/uk/messages.json
@@ -7,6 +7,10 @@
     "message":"Найпопулярніше розширення для Chrome, яким користуються понад 60 мільйонів людей! Заблокуйте рекламу по всьому інтернету.",
     "description":"Extension description in manifest. Should not exceed 132 characters."
   },
+  "name_releasebuild":{
+    "description":"Extension name to be shown for release \/ published builds.  Should not be translated",
+    "message":"AdBlock"
+  },
   "description_edge":{
     "message":"AdBlock. Блокувальник реклами № 1, завантажений більш ніж 200 мільйонів разів. Блокує рекламу по всьому інтернету.",
     "description":"Description for the AdBlock for Edge extension. Should not exceed 132 characters."
@@ -1912,5 +1916,9 @@
   "changes_to_adblock":{
     "message":"Ми внесли зміни до AdBlock!",
     "description":"Link to Options page with more information about the changes."
+  },
+  "myadblock_options_page_header":{
+    "message":"MyAdBlock",
+    "description":"The text of the header the MyAdBlock Options page"
   }
 }
